// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactDetails Screen Renders correctly 1`] = `
<BVLinearGradient
  colors={
    Array [
      4278209869,
      4278214495,
      4279897917,
    ]
  }
  endPoint={
    Object {
      "x": 1.28,
      "y": 0.7,
    }
  }
  locations={
    Array [
      0,
      0.5,
      1,
    ]
  }
  startPoint={
    Object {
      "x": -0.28,
      "y": 0.3,
    }
  }
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "flex": 1,
      },
    ]
  }
>
  <RNCSafeAreaView
    edges={
      Object {
        "bottom": "additive",
        "left": "additive",
        "right": "additive",
        "top": "off",
      }
    }
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "flex": 1,
        },
        Object {
          "paddingTop": 0,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "padding": 16,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Text
          maxFontSizeMultiplier={2}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 18,
                "fontWeight": "bold",
              },
              Object {
                "color": "#42803E",
                "fontSize": 90,
                "lineHeight": 90,
              },
            ]
          }
        >
          B
        </Text>
        <Text
          maxFontSizeMultiplier={2}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 26,
                "fontWeight": "bold",
              },
              Object {
                "flexShrink": 1,
              },
            ]
          }
        >
          BestBC College
        </Text>
      </View>
      <Text
        maxFontSizeMultiplier={2}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 18,
              "fontWeight": "normal",
            },
            Object {
              "marginTop": 16,
            },
          ]
        }
      >
        ContactDetails.DateOfConnection
      </Text>
    </View>
    <View>
      <View
        accessibilityState={
          Object {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          Object {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "flexDirection": "row",
            "gap": 8,
            "marginTop": 8,
            "opacity": 1,
            "padding": 16,
          }
        }
        testID="com.ariesbifold:id/StartVideoCall"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            Array [
              Object {
                "color": "#42803E",
                "fontSize": 20,
              },
              undefined,
              Object {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          󰕧
        </Text>
        <Text
          maxFontSizeMultiplier={2}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 18,
                "fontWeight": "normal",
              },
              Object {
                "color": "#42803E",
              },
            ]
          }
        >
          ContactDetails.StartVideoCall
        </Text>
      </View>
      <View
        accessibilityState={
          Object {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          Object {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "flexDirection": "row",
            "gap": 8,
            "marginTop": 8,
            "opacity": 1,
            "padding": 16,
          }
        }
        testID="com.ariesbifold:id/RenameContact"
      >
        <
          height={20}
          width={20}
        />
        <Text
          maxFontSizeMultiplier={2}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 18,
                "fontWeight": "normal",
              },
              undefined,
            ]
          }
        >
          Screens.RenameContact
        </Text>
      </View>
      <View
        accessibilityState={
          Object {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          Object {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "flexDirection": "row",
            "gap": 8,
            "marginTop": 8,
            "opacity": 1,
            "padding": 16,
          }
        }
        testID="com.ariesbifold:id/RemoveFromWallet"
      >
        <
          color="#D8292F"
          height={20}
          width={20}
        />
        <Text
          maxFontSizeMultiplier={2}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 18,
                "fontWeight": "normal",
              },
              Object {
                "color": "#D8292F",
              },
            ]
          }
        >
          ContactDetails.RemoveContact
        </Text>
      </View>
    </View>
  </RNCSafeAreaView>
</BVLinearGradient>
`;

exports[`ContactDetails Screen Renders correctly with alt contact name 1`] = `
<BVLinearGradient
  colors={
    Array [
      4278209869,
      4278214495,
      4279897917,
    ]
  }
  endPoint={
    Object {
      "x": 1.28,
      "y": 0.7,
    }
  }
  locations={
    Array [
      0,
      0.5,
      1,
    ]
  }
  startPoint={
    Object {
      "x": -0.28,
      "y": 0.3,
    }
  }
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "flex": 1,
      },
    ]
  }
>
  <RNCSafeAreaView
    edges={
      Object {
        "bottom": "additive",
        "left": "additive",
        "right": "additive",
        "top": "off",
      }
    }
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "flex": 1,
        },
        Object {
          "paddingTop": 0,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "padding": 16,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Text
          maxFontSizeMultiplier={2}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 18,
                "fontWeight": "bold",
              },
              Object {
                "color": "#42803E",
                "fontSize": 90,
                "lineHeight": 90,
              },
            ]
          }
        >
          A
        </Text>
        <Text
          maxFontSizeMultiplier={2}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 26,
                "fontWeight": "bold",
              },
              Object {
                "flexShrink": 1,
              },
            ]
          }
        >
          Alt Name
        </Text>
      </View>
      <Text
        maxFontSizeMultiplier={2}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 18,
              "fontWeight": "normal",
            },
            Object {
              "marginTop": 16,
            },
          ]
        }
      >
        ContactDetails.DateOfConnection
      </Text>
    </View>
    <View>
      <View
        accessibilityState={
          Object {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          Object {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "flexDirection": "row",
            "gap": 8,
            "marginTop": 8,
            "opacity": 1,
            "padding": 16,
          }
        }
        testID="com.ariesbifold:id/StartVideoCall"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            Array [
              Object {
                "color": "#42803E",
                "fontSize": 20,
              },
              undefined,
              Object {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          󰕧
        </Text>
        <Text
          maxFontSizeMultiplier={2}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 18,
                "fontWeight": "normal",
              },
              Object {
                "color": "#42803E",
              },
            ]
          }
        >
          ContactDetails.StartVideoCall
        </Text>
      </View>
      <View
        accessibilityState={
          Object {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          Object {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "flexDirection": "row",
            "gap": 8,
            "marginTop": 8,
            "opacity": 1,
            "padding": 16,
          }
        }
        testID="com.ariesbifold:id/RenameContact"
      >
        <
          height={20}
          width={20}
        />
        <Text
          maxFontSizeMultiplier={2}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 18,
                "fontWeight": "normal",
              },
              undefined,
            ]
          }
        >
          Screens.RenameContact
        </Text>
      </View>
      <View
        accessibilityState={
          Object {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          Object {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "flexDirection": "row",
            "gap": 8,
            "marginTop": 8,
            "opacity": 1,
            "padding": 16,
          }
        }
        testID="com.ariesbifold:id/RemoveFromWallet"
      >
        <
          color="#D8292F"
          height={20}
          width={20}
        />
        <Text
          maxFontSizeMultiplier={2}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 18,
                "fontWeight": "normal",
              },
              Object {
                "color": "#D8292F",
              },
            ]
          }
        >
          ContactDetails.RemoveContact
        </Text>
      </View>
    </View>
  </RNCSafeAreaView>
</BVLinearGradient>
`;
